@@ -56,7 +56,7 @@ jobs:
             done
 
       - name: Run Spellcheck
-        uses: rojopolis/spellcheck-github-actions@0.40.0
+        uses: rojopolis/spellcheck-github-actions@0.41.0
 
   docker-build-pull:
     runs-on: ubuntu-latest
