@@ -12,5 +12,5 @@ requests==2.32.3
 tenacity==9.0.0
 ruamel.yaml==0.18.6
 schedule==1.2.2
-setuptools==72.1.0
+setuptools==72.2.0
 tmdbapis==1.2.16
